--- a/env.example
+++ b/env.example
@@ -1,24 +1,32 @@
-# Telegram Bot
-TELEGRAM_TOKEN=your_bot_token_here
+# Telegram Bot Configuration
+# Получите токен у @BotFather в Telegram
+TELEGRAM_TOKEN=your_telegram_token_here
 
-# Database
+# Database Configuration
+# Настройки подключения к PostgreSQL
 DB_NAME=schoolbot
 DB_USER=schoolbot
-DB_PASS=your_secure_password_here
-DB_HOST=db
+DB_PASS=secure_password_change_me
+DB_HOST=localhost
 DB_PORT=5432
 
-# Redis
-REDIS_DSN=redis://redis:6379/0
+# Redis Configuration
+# URL для подключения к Redis
+REDIS_DSN=redis://localhost:6379/0
 
 # Environment
-ENV=prod
+# prod, staging, dev
+ENV=dev
 
 # Admin Telegram IDs
-ADMIN_IDS=123456789,987654321
+# Список ID администраторов через запятую
+# Получите свой ID у @userinfobot
+ADMIN_IDS=your_admin_id_here
 
 # Monitoring (optional)
-GLITCHTIP_DSN=http://<public_key>@glitchtip:8000/1
+# DSN для GlitchTip/Sentry мониторинга
+GLITCHTIP_DSN=
 
 # App settings
+# Количество дней для хранения данных
 KEEP_DAYS=14
