--- a/requirements.txt
+++ b/requirements.txt
@@ -17,10 +17,21 @@ isort>=5.13.0
 flake8>=7.0.0
 reportlab>=4.0.0
 ruff==0.4.4
-sentry-sdk==2.4.0
+sentry-sdk>=2.8.0
 aiohttp>=3.9.0
 prometheus-client>=0.19.0
 requests>=2.31.0
+beautifulsoup4>=4.12.0
+lxml>=4.9.0
 pytest-cov>=4.1.0
 psutil>=5.9.0
 pydantic-settings>=2.0.0
+aiofiles>=23.2.1,<24.2
+certifi>=2023.7.22
+PyYAML>=6.0
+
+# Новые зависимости для оптимизации производительности
+aiocache>=0.12.0
+locust>=2.17.0
+py-spy>=0.3.14
+memory-profiler>=0.61.0
